<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quizapp">QuizApp</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="question">Question</string>
    <string name="question_count">%s/3</string>
    <string name="next">Next</string>
    <string name="play_again">Take New Quiz</string>
    <string name="quit_quiz">Quit Quiz</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="share_results">Share Results</string>
</resources>