<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="@dimen/_16sdp"
    tools:context=".views.QuizFragment">

    <TextView
        android:id="@+id/tv_question_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16ssp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/question"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintBottom_toBottomOf="@id/tv_question_tag"
        app:layout_constraintStart_toEndOf="@id/tv_question_tag"
        app:layout_constraintTop_toTopOf="@id/tv_question_tag"
        tools:text="1" />

    <LinearLayout
        android:id="@+id/indicator_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_question_tag">

        <include
            android:id="@+id/level_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/progress_indicator"/>

        <include
            android:id="@+id/level_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/progress_indicator"/>

        <include
            android:id="@+id/level_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/progress_indicator"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="#EAEAEA"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="@id/tv_question_count"
        app:layout_constraintStart_toEndOf="@id/tv_question_count"
        app:layout_constraintTop_toTopOf="@id/tv_question_count"
        tools:text="/3" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/indicator_ly"
        tools:text="Hello" />

    <LinearLayout
        android:id="@+id/options_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_question">


        <include
            android:id="@+id/option_one"
            layout="@layout/option_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_7sdp" />

        <include
            android:id="@+id/option_two"
            layout="@layout/option_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_7sdp" />

        <include
            android:id="@+id/option_three"
            layout="@layout/option_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_7sdp" />

        <include
            android:id="@+id/option_four"
            layout="@layout/option_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_7sdp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/quit_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:drawableStart="@drawable/quit_icon"
        android:drawablePadding="@dimen/_3sdp"
        android:fontFamily="@font/opensans_bold"
        android:gravity="center_vertical"
        android:text="@string/quit_quiz"
        android:textColor="#DFDFDF"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_next" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/brand_button_bg"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline2"
         />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>